--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^10.2.1",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "element-plus": "^2.3.7",
     "pinia": "^2.1.3",
     "pinia-plugin-persistedstate": "^3.1.0",
